GPencil: framechanging does not evaluate keyframed layer transform correctly (if this would result in identity matrix) #101164
Closed
opened 2022-09-18 13:10:56 +02:00 by Piotr Nikov
·
21 comments
No Branch/Tag Specified
main
blender-v3.6-release
blender-v3.3-release
temp-sculpt-dyntopo
asset-shelf
temp-sculpt-dyntopo-hive-alloc
brush-assets-project
tmp-usd-python-mtl
asset-browser-frontend-split
node-group-operators
blender-v2.93-release
universal-scene-description
temp-sculpt-attr-api
blender-v3.5-release
realtime-clock
sculpt-dev
gpencil-next
bevelv2
microfacet_hair
blender-projects-basics
xr-dev
principled-v2
v3.3.7
v2.93.18
v3.5.1
v3.3.6
v2.93.17
v3.5.0
v2.93.16
v3.3.5
v3.3.4
v2.93.15
v2.93.14
v3.3.3
v2.93.13
v2.93.12
v3.4.1
v3.3.2
v3.4.0
v3.3.1
v2.93.11
v3.3.0
v3.2.2
v2.93.10
v3.2.1
v3.2.0
v2.83.20
v2.93.9
v3.1.2
v3.1.1
v3.1.0
v2.83.19
v2.93.8
v3.0.1
v2.93.7
v3.0.0
v2.93.6
v2.93.5
v2.83.18
v2.93.4
v2.93.3
v2.83.17
v2.93.2
v2.93.1
v2.83.16
v2.93.0
v2.83.15
v2.83.14
v2.83.13
v2.92.0
v2.83.12
v2.91.2
v2.83.10
v2.91.0
v2.83.9
v2.83.8
v2.83.7
v2.90.1
v2.83.6.1
v2.83.6
v2.90.0
v2.83.5
v2.83.4
v2.83.3
v2.83.2
v2.83.1
v2.83
v2.82a
v2.82
v2.81a
v2.81
v2.80
v2.80-rc3
v2.80-rc2
v2.80-rc1
v2.79b
v2.79a
v2.79
v2.79-rc2
v2.79-rc1
v2.78c
v2.78b
v2.78a
v2.78
v2.78-rc2
v2.78-rc1
v2.77a
v2.77
v2.77-rc2
v2.77-rc1
v2.76b
v2.76a
v2.76
v2.76-rc3
v2.76-rc2
v2.76-rc1
v2.75a
v2.75
v2.75-rc2
v2.75-rc1
v2.74
v2.74-rc4
v2.74-rc3
v2.74-rc2
v2.74-rc1
v2.73a
v2.73
v2.73-rc1
v2.72b
2.72b
v2.72a
v2.72
v2.72-rc1
v2.71
v2.71-rc2
v2.71-rc1
v2.70a
v2.70
v2.70-rc2
v2.70-rc
v2.69
v2.68a
v2.68
v2.67b
v2.67a
v2.67
v2.66a
v2.66
v2.65a
v2.65
v2.64a
v2.64
v2.63a
v2.63
v2.61
v2.60a
v2.60
v2.59
v2.58a
v2.58
v2.57b
v2.57a
v2.57
v2.56a
v2.56
v2.55
v2.54
v2.53
v2.52
v2.51
v2.50
v2.49b
v2.49a
v2.49
v2.48a
v2.48
v2.47
v2.46
v2.45
v2.44
v2.43
v2.42a
v2.42
v2.41
v2.40
v2.37a
v2.37
v2.36
v2.35a
v2.35
v2.34
v2.33a
v2.33
v2.32
v2.31a
v2.31
v2.30
v2.28c
v2.28a
v2.28
v2.27
v2.26
v2.25
Labels
Clear labels
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Apply labels
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
Milestone
Set milestone
Clear milestone
No items
No Milestone
Projects
Set Project
Clear projects
No project
Assignees
Assign users
Clear assignees
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#101164
Reference in New Issue
There is no content yet.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may exist for a short time before cleaning up, in most cases it CANNOT be undone. Continue?
System Information
Operating system: MacOs 12.6
Graphics card: M1
Blender Version
Broken: 3.4.0 (3.4.0 2022-09-17)
Worked: ?
Short description of error
When animating Grease Pencil Transforms in Stroke Properties, there is a refresh problem (it doesn't refresh) when going back to first frame of animation using Jump to first frame ...
Workaround seems to be clicking a keyframe in the Dopesheet.
Exact steps for others to reproduce the error
Jump to Previous keyframe
button from timeline header(notice viewport doesn't update. Clicking anywhere in dopsheet later updates the viewport)
Kapture 2022-09-18 at 12.59.55.mp4
AnimatedGP_Transform_Refresh_Bug.blend
Seems to only be the case with exactly 0° rotation?
If I change the first rotation keyframe to have a value of 1°, this all of a sudden seems to work fine:
AnimatedGP_Transform_Refresh_Bug_repro.blend
going to / going from zero rotation goes wrong:
gpencil_layer_transform_zero_rotation_.blend
Added subscriber: @Pyer
#101325 was marked as duplicate of this issue
Added subscriber: @antoniov
Changed status from 'Needs Triage' to: 'Confirmed'
Added subscriber: @PratikPB2123
Added subscriber: @amelief
I am not sure I understand the issue.
If the issue is that we cannot see the keyframes in the dopesheet, that is because the dopesheet is in 'Grease Pencil' mode, and thus only displaying layer keyframes (meaning drawn keyframes, and not transform or gpencil data keyframes). If you switch to the standard mode of the dopesheet, you can see that the keyframes are correctly created.
Hello! The issue is that when animating a Grease Pencil Transform, when you press the Icon to go to the first frame of the animation (or jump to previous/next key)
the viewport does not refresh the animated GP transform (timecode 00:17 in the video).
It refreshes the viewport when you click anywhere in the Dopesheet window (GP or normal).
Animated GreasePencil transform refresh bugto GPencil: Jump to previous keyframe doesn't update the viewport for transform propertiesAdded subscriber: @lichtwerk
Jumping to next seems to go fine on my side.
Could it be that this is only the case with exactly 0° rotation?
If I change the first rotation keyframe to have a value of 1°, this all of a sudden seems to work fine:
AnimatedGP_Transform_Refresh_Bug_repro.blend
@lichtwerk
Haha you're right!! So weird!!!
So this is true for all framechanging (mouse, frame offset, frame jump, ..)
Seems like greasepencil is just not evaluating right for zero rotation keyframes
GPencil: Jump to previous keyframe doesn't update the viewport for transform propertiesto GPencil: framechanging does not evaluate keyframed layer transform rotation of exactly zero degrees correctly@lichtwerk
Oh wait it actually does the same thing with Location, you have to put a different value than zero for it to refresh correctly...
Scaling seems to be ok.
Ah, there are (optimization checks for this in
BKE_gpencil_prepare_eval_data
&BKE_gpencil_update_layer_transforms
Will check on a fix
GPencil: framechanging does not evaluate keyframed layer transform rotation of exactly zero degrees correctlyto GPencil: framechanging does not evaluate keyframed layer transform correctly (if this would result in identity matrix)This issue was referenced by
dfcc8086fb
This issue was referenced by
24814a03b7
This issue was referenced by
1cbfe04638
@lichtwerk Hello and sorry for asking, but is this going to be published to master at some point? I'm still not seeing it in the recent nightly builds. Thanks :)
Probably soonish (just waiting for a second pair of eyes)
Added subscriber: @miya
Changed status from 'Confirmed' to: 'Resolved'